--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "object-path": "^0.11.4",
         "perfect-scrollbar": "^1.5.0",
         "portal-vue": "^2.1.7",
+        "request-promise-native": "^1.0.9",
         "roboto-fontface": "*",
         "socicon": "^3.0.5",
         "sweetalert2": "^9.10.12",
